Add buses to mvc model.